kubernetes/test/apps/scrypted/scrypted/app/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: scrypted
  labels:
    app.kubernetes.io/name: scrypted
    app.kubernetes.io/instance: scrypted
spec:
  type: ClusterIP
  ports:
  - port: 443
    targetPort: https
    protocol: TCP
    name: websecure
  selector:
    app.kubernetes.io/name: scrypted
    app.kubernetes.io/instance: scrypted
---
apiVersion: v1
kind: Service
metadata:
  name: homebridge-ports
  annotations:
    io.cilium/lb-ipam-ips: "10.100.90.73"
  labels:
    app.kubernetes.io/name: scrypted
    app.kubernetes.io/instance: scrypted
spec:
  type: LoadBalancer
  ports:
  - port: 49320
    targetPort: homekitbridge01
    protocol: TCP
    name: homekitbridge
  - port: 51827
    targetPort: homekitbridge02
    protocol: TCP
    name: homekitbridge2
  - port: 5353
    targetPort: mdns
    protocol: UDP
    name: mdns
  selector:
    app.kubernetes.io/name: scrypted
    app.kubernetes.io/instance: scrypted
